--- a/_posts/java/2015-07-25-java-reorder-hb.html
+++ b/_posts/java/2015-07-25-java-reorder-hb.html
@@ -223,8 +223,8 @@ class Foo {
         <h2>使用静态变量</h2>
     </li>
     <li>
-        假如使用的单例是静态的，则可以将单例定义为某个类的静态字段，Java会保证直到静态字段被引用，才会对字段进行初始化，
-        任何访问该字段的线程将看到对该字段初始化的写操作，如:
+        可以将单例定义为某个类的静态字段，Java会保证直到静态字段被引用，才会对字段进行初始化，
+        任何访问该字段的线程将能看到对该字段初始化的写操作，如:
     </li>
     {% highlight java %}
 class HelperSingleton {
