--- a/_posts/web/2015-08-05-react-dev.html
+++ b/_posts/web/2015-08-05-react-dev.html
@@ -279,6 +279,7 @@ var Button = React.createClass({
     </li>
     <p class="wrap">
     	React大多<a href="http://react-components.com/" target="_blank">第三方组件</a>是遵循<a href="http://www.npmjs.com/" target="_blank">npm</a>规范，
+        即<a href="http://www.commonjs.org/specs/modules/1.0/">CommonJS</a>规范，
     	于是我们可以考虑使用<a href="http://webpack.github.io/docs/" target="_blank">webpack</a>来管理React组件的依赖关系，
     </p>
     <li>
