--- a/_posts/java/2016-04-01-aqs.html
+++ b/_posts/java/2016-04-01-aqs.html
@@ -4,7 +4,7 @@ category : [java]
 tags : [java, 并发, AbstractQueuedSynchronizer]
 layout : post
 show : 1
-keywords: java,AbstractQueuedSynchronizer,AbstractQueuedSynchronizer源码分析
+keywords: java,AbstractQueuedSynchronizer源码分析,AbstractQueuedSynchronizer原理
 ---
 
 
