--- a/_posts/mysql/2016-09-10-mysql-innodb-03-lock-and-transaction-model.html
+++ b/_posts/mysql/2016-09-10-mysql-innodb-03-lock-and-transaction-model.html
@@ -476,6 +476,9 @@ DELETE FROM table WHERE ?;
 		<div class="item">
 			<a href="http://www.cnblogs.com/zhoujinyi/p/3435982.html" target="_blank">http://www.cnblogs.com/zhoujinyi/p/3435982.html</a>
 		</div>
+        <div class="item">
+            <a href="http://www.slideshare.net/frogd/innodb-transaction-lock-and-mvcc?from_action=save" target="_blank">http://www.slideshare.net/frogd/innodb-transaction-lock-and-mvcc?from_action=save</a>
+        </div>
 	</div>
 
 </ul>
