--- a/_posts/java/2016-04-01-aqs.html
+++ b/_posts/java/2016-04-01-aqs.html
@@ -754,16 +754,16 @@ final boolean acquireQueued(final Node node, int arg) {
 			<a href="" target="_blank">Java并发编程第14章</a>
 		</div>
 		<div class="item">
-			<a href="http://webcourse.cs.technion.ac.il/236755/Spring2015/ho/WCFiles/QueueLocksAndLocalSpinningPrint.pdf" target="_blank">http://webcourse.cs.technion.ac.il/236755/Spring2015/ho/WCFiles/QueueLocksAndLocalSpinningPrint.pdf</a>
+			<a href="http://webcourse.cs.technion.ac.il/236755/Spring2015/ho/WCFiles/QueueLocksAndLocalSpinningPrint.pdf" target="_blank">QueueLocksAndLocalSpinningPrint.pdf</a>
 		</div>
 		<div class="item">
-			<a href="http://coderbee.net/index.php/concurrent/20131115/577" target="_blank">http://coderbee.net/index.php/concurrent/20131115/577</a>
+			<a href="http://coderbee.net/index.php/concurrent/20131115/577" target="_blank">自旋锁、MCS锁、CLH锁</a>
 		</div>
 		<div class="item">
-			<a href="http://ifeve.com/introduce-abstractqueuedsynchronizer/" target="_blank">http://ifeve.com/introduce-abstractqueuedsynchronizer/</a>
+			<a href="http://ifeve.com/introduce-abstractqueuedsynchronizer/" target="_blank">AbstractQueuedSynchronizer介绍</a>
 		</div>
 		<div class="item">
-			<a href="http://www.infoq.com/cn/articles/jdk1.8-abstractqueuedsynchronizer" target="_blank">http://www.infoq.com/cn/articles/jdk1.8-abstractqueuedsynchronizer</a>
+			<a href="http://www.infoq.com/cn/articles/jdk1.8-abstractqueuedsynchronizer" target="_blank">jdk1.8 AbstractQueuedSynchronizer</a>
 		</div>		
 	</div>
     
