--- a/_posts/jvm/2016-02-20-java-memory-manage.html
+++ b/_posts/jvm/2016-02-20-java-memory-manage.html
@@ -1132,11 +1132,11 @@ public class SerialVSParallel {
     	<h2>参考文献</h2>
     </li>
 	<p class="wrap">
-		<a href="http://www.oracle.com/technetwork/java/javase/memorymanagement-whitepaper-150215.pdf" target="_blank">http://www.oracle.com/technetwork/java/javase/memorymanagement-whitepaper-150215.pdf</a><br>
-		<a href="http://www.oracle.com/webfolder/technetwork/tutorials/obe/java/gc01/index.html">http://www.oracle.com/webfolder/technetwork/tutorials/obe/java/gc01/index.html</a>
-		<a href="http://stackoverflow.com/questions/20430058/parallel-compacting-collector-algorithm" target="_blank">http://stackoverflow.com/questions/20430058/parallel-compacting-collector-algorithm</a>
-		<a href="https://docs.oracle.com/javase/8/docs/technotes/guides/vm/gctuning/cms.html" target="_blank">https://docs.oracle.com/javase/8/docs/technotes/guides/vm/gctuning/cms.html</a>
-		<a href="http://blog.sina.com.cn/s/blog_515015800100gwu6.html" target="_blank">http://blog.sina.com.cn/s/blog_515015800100gwu6.html</a>
+		<a href="http://www.oracle.com/technetwork/java/javase/memorymanagement-whitepaper-150215.pdf" target="_blank">Java 内存管理白皮书</a><br>
+		<a href="http://www.oracle.com/webfolder/technetwork/tutorials/obe/java/gc01/index.html">Java GC</a>
+		<a href="http://stackoverflow.com/questions/20430058/parallel-compacting-collector-algorithm" target="_blank">Java并行压缩收集算法</a>
+		<a href="https://docs.oracle.com/javase/8/docs/technotes/guides/vm/gctuning/cms.html" target="_blank">Java CMS调优</a>
+		<a href="http://blog.sina.com.cn/s/blog_515015800100gwu6.html" target="_blank">JVM垃圾收集</a>
 	</p>
 
 
